# pixelgenerator

./: CMakeLists.txt  README.md
shaders/: PixelShader.hlsl  VertexShader.hlsl
src/: main.cpp
